@@ -3,7 +3,6 @@
 <modification xmlns="http://www.simplemachines.org/xml/modification" xmlns:smf="http://www.simplemachines.org/">
     <id>JBlaze:SimpleXBL</id>
     <version>3.0.0</version>
-
     <file name="$sourcedir/Load.php">
         <operation>
             <search position="replace"><![CDATA[			mem.birthdate, mem.member_ip, mem.member_ip2, mem.icq, mem.aim, mem.yim, mem.msn, mem.posts, mem.last_login,]]></search>
@@ -14,7 +13,6 @@
             <add><![CDATA[			mem.openid_uri, mem.birthdate, mem.icq, mem.aim, mem.yim, mem.msn, mem.posts, mem.last_login, mem.karma_good, mem.gamertag,]]></add>
         </operation>
     </file>
-
     <file name="$sourcedir/ManagePermissions.php">
         <operation>
             <search position="before"><![CDATA[				'administrate',]]></search>
@@ -29,7 +27,6 @@
             'xbl_add_gamertag' => array(false, 'simplexbl', 'simplexbl'),]]></add>
         </operation>
     </file>
-
     <file name="$sourcedir/Profile-Modify.php">
         <operation>
             <search position="after"><![CDATA[		'gender' => array(]]></search>
@@ -70,5 +67,4 @@
             'gamertag', 'hr',]]></add>
         </operation>
     </file>
-
 </modification>
