@@ -1,0 +1,3 @@
+[font size=18pt]SimpleXBL 3.0.0[/font]
+by [url=https://github.com/jasonclemons/]Jason Clemons[/url]
+Based on [url=http://www.vbulletin.org/forum/showthread.php?t=139958]gXboxLive[/url] by [url=http://www.gryphonllc.com]Ryan Snook[/url]
