@@ -1,6 +1,69 @@
 <?xml version="1.0"?>
 <!DOCTYPE modification SYSTEM "http://www.simplemachines.org/xml/modification">
 <modification xmlns="http://www.simplemachines.org/xml/modification" xmlns:smf="http://www.simplemachines.org/">
-  <id>jasonclemons:SimpleXBL</id>
-  <version>1.0</version>
+    <id>JBlaze:SimpleXBL</id>
+    <version>3.0.0</version>
+    <file name="$sourcedir/Load.php">
+        <operation>
+            <search position="replace"><![CDATA[ mem.gamertag,]]></search>
+            <add><![CDATA[]]></add>
+        </operation>
+        <operation>
+            <search position="replace"><![CDATA[ mem.gamertag,]]></search>
+            <add><![CDATA[]]></add>
+        </operation>
+    </file>
+    <file name="$sourcedir/ManagePermissions.php">
+        <operation>
+            <search position="replace"><![CDATA[
+                'simplexbl',]]></search>
+            <add><![CDATA[]]></add>
+        </operation>
+        <operation>
+            <search position="replace"><![CDATA[
+            'xbl_admin' => array(false, 'simplexbl', 'simplexbl'),
+            'xbl_access_lb' => array(false, 'simplexbl', 'simplexbl'),
+            'xbl_add_gamertag' => array(false, 'simplexbl', 'simplexbl'),]]></search>
+            <add><![CDATA[]]></add>
+        </operation>
+    </file>
+    <file name="$sourcedir/Profile-Modify.php">
+        <operation>
+            <search position="replace"><![CDATA[		'gamertag' => array(
+            'type' => 'text',
+            'value' => !empty($cur_profile['gamertag']) ? $cur_profile['gamertag'] : '',
+            'label' => $txt['xbl_profile_label'],
+            'subtext' => $txt['xbl_profile_subtext'],
+            'size' => 24,
+            'permission' => 'xbl_add_gamertag',
+        ),
+]]></search>
+            <add><![CDATA[]]></add>
+        </operation>
+        <operation>
+            <search position="replace"><![CDATA[		// Stick this in here
+        if ($key == 'gamertag' && !empty($_POST['gamertag']))
+        {
+            $smcFunc['db_insert']('replace',
+                '{db_prefix}xbox_leaders',
+                array('id_member' => 'int', 'gamertag' => 'string'),
+                array($context['id_member'], $_POST['gamertag']),
+                array('id_member')
+            );
+        }
+        elseif ($key == 'gamertag' && empty($_POST['gamertag']))
+        {
+            require_once($sourcedir . '/SimpleXBL.php');
+            sxbl_delete_member($context['id_member']);
+        }
+
+]]></search>
+            <add><![CDATA[]]></add>
+        </operation>
+        <operation>
+            <search position="replace"><![CDATA[
+            'gamertag', 'hr',]]></search>
+            <add><![CDATA[]]></add>
+        </operation>
+    </file>
 </modification>
